--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
+    "typescript-eslint": "^8.39.0",
     "vite": "^7.0.6"
   }
 }
