--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "test": "vitest run",
+    "patch": "node scripts/openaiPatch.js"
   },
   "dependencies": {
     "@tanstack/react-query": "^4.32.6",
@@ -34,6 +36,7 @@
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
-    "vite": "^7.0.6"
+    "vite": "^7.0.6",
+    "vitest": "^1.6.0"
   }
 }
